# CircuitPython_Synth_Tools

./: .pre-commit-config.yaml  .pylintrc  README.rst  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: arpeggiator_demo.py  pitch_glider.py  step_sequencer_bassdemo.py  step_sequencer_demo.py  synth_setup.py  synth_tools_simpletest.py  trig_sequencer_demo.py  wavetable_demo.py
examples/kit0_909/: readme.txt
examples/wavs/: REUSE.toml
synth_tools/: __init__.py  ahr_envelope.py  arpeggiator.py  instrument.py  paramset.py  patch.py  patch_saver.py  pitch_glider.py  step_sequencer.py  trig_sequencer.py  waves.py  wavetable.py
synth_tools/ui/: gauge_cluster.py  param.py  param_scaler.py
